--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "@frappy/react-authentication",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "description": "Authentication related components for React",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "type": "module",
+  "module": "dist/esm/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/babel src --out-dir ./dist",
     "deploy": "npm run build && npm publish",
-    "format": "eslint --fix \"**/*.{js,mjs}\""
+    "format": "eslint --fix \"**/*.{js,mjs,tsx,ts}\"",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:ilfrich/frappy-react-authentication.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "authentication",
     "users",
@@ -19,18 +24,17 @@
     "react"
   ],
   "author": "Peter Ilfrich",
-  "dependencies": {
-    "quick-n-dirty-react": "^1.0.1",
+  "peerDependencies": {
+    "quick-n-dirty-react": "^1.1.0",
     "quick-n-dirty-utils": "^1.0.0",
-    "react": "^16.13.1"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.2",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@types/react": "^18.2.15",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -38,7 +42,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "quick-n-dirty-react": "^1.1.1",
+    "quick-n-dirty-utils": "^1.0.0",
+    "react": "^18.2.0",
+    "rollup": "^3.26.3",
+    "rollup-plugin-dts": "^5.3.0",
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6"
   }
 }
